# customer-app

./: .dockerignore  .env.local  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.local.yaml  pyproject.toml  requirements.local.txt  requirements.txt
src/application/: layer.py  module.py
src/application/event_subscribers/: ask_admin_for_callback_request.py  send_quick_order_to_admin.py
src/application/exception/: base.py  product_not_found.py
src/domain/: __init__.py  layer.py
src/domain/entities/: base.py  category.py  comment.py  product.py
src/domain/event_bus/: bus.py  event.py  event_based.py  mixin.py
src/domain/events/: base.py  callback_request_asked.py  quick_order_created.py
src/domain/exception/: base.py
src/domain/repository/: base.py  category.py  product.py
src/domain/service/: callback_request.py  category.py  product.py  quick_order.py
src/domain/value_object/: base.py  callback_request.py  phone_number.py  quick_order.py
src/infrastructure/: __init__.py  exception.py  layer.py  module.py
src/infrastructure/database/: connection.py  mapper.py  transaction.py
src/infrastructure/di/: container.py  module.py  utils.py
src/infrastructure/repository/: base.py  category.py  product.py
src/infrastructure/settings/: alembic.py  application.py  database.py  rabbitmq.py
src/infrastructure/tl_outbox/: repository.py  service.py
src/interface/cli/: app.py  decorator.py
src/interface/queue/: app.py  config.py  routes.py
tasks/: __init__.py  infra.py  migration.py  packages.py  shared.py
(+153 files in other folders)
