[project]
name = "customer-app"
version = "0.0.1"
description = "The customer microservice application."
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "fastapi",
    "uvicorn",
]

[project.optional-dependencies]
local = [
    "pytest",
    "ipython",
    "invoke",
]
